Update linear_algebra.tex, matricer.tex, and 2 more files...

--- a/incl/main/linear_algebra/linear_algebra.tex
+++ b/incl/main/linear_algebra/linear_algebra.tex
@@ -1,7 +1,7 @@
 \chapter{Lineær algebra}
 %
-Lineær algebra bla bla indledende tekst - Rasmus
-Dette kapitel tager udgangspunkt i \citep[side 3-188 og 227-259]{lial}, hvis ikke andet er angivet 
+For at kunne behandle et optimeringsproblem, undersøges først en række universelle begræber indenfor lineær algebra, der er anvendelige i forbindelse med problemet.
+Dette kapitel tager udgangspunkt i \citep[side 3-188 og 227-259]{lial}, hvis ikke andet er angivet.
 %
 \input{incl/main/linear_algebra/matricer_vektorer/matricer.tex}
 	% Matricer og vektorer
