--- a/incl/main/linear_algebra/matricer_vektorer/matricer.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/matricer.tex
@@ -5,7 +5,7 @@
 I forbindelse med løsning af lineære ligningssystemer og optimeringsproblemer er det nødvendigt at introducere \textit{matricer} og tilhørende notation. 
 %
 \begin{defn}{}{}
-En \textbf{matrix} er en rektangulær tabel, hvis elementer er \textbf{skalarer}, der er $k \in \R$. 
+En \textbf{matrix} er en rektangulær tabel, hvis elementer er \textbf{skalarer}, hvor $k \in \R$. 
 En matrix med $m$ \textbf{rækker} og $n$ \textbf{søjler} har størrelsen $m \times n$.
 Hvis $m=n$, er matricen kvadratisk, noteret $n \times n$.
 Elementet $a_{i,j}$ i $i$'te række og $j$'te søjle kaldes den $(i,j)$'te-indgang i matricen. 
