--- a/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
@@ -3,7 +3,7 @@
 Der er behov for at lave opperationer på en matrix i forbindelse med løsning af lineære programmeringsproblemer. 
 To af disse er \textit{matrixsum} og \textit{skalering}.
 %
-\begin{defn}{}{mxsum}
+\begin{defn}{}{mxsum} % Jeg synes substration skal være fed
 Lad $A$ og $B$ være $m \times n$ matricer.
 \textbf{Summen} af $A$ og $B$ er $m \times n$ matricen $A + B$, hvor den $(i,j)$'te indgang er $a_{i,j} + b_{i,j}$.
 Ligeledes er subtraktion mellem matricerne $A$ og $B$ muligt, og indgangene i den resulterende matrix er $a_{i,j} - b_{i,j}$.
@@ -31,7 +31,7 @@ B=
 5	&	3	&	2
 \end{bmatrix}.
 \end{align*}
-Jævnfør definition \ref{defn:mxsum} er
+Jævnfør \ref{defn:mxsum} er
 \begin{align*}
 3A= 
 \begin{bmatrix}
@@ -65,7 +65,7 @@ og
 \end{align*}
 \end{eks}
 %
-Ud fra disse operationer har matricer en række egenskaber, som ses i sætning \ref{thm:mxprop}.
+Ud fra disse operationer har matricer en række egenskaber, som ses i \ref{thm:mxprop}.
 %Nedenstående definition er ordret den samme som i bogen (s. 6), men vi kan jo nærmest ikke skrive den og lignende sætninger anderledes; skal vi ikke bare lige vende det med Horia, tror I? 
 \begin{thm}{}{mxprop}
 Lad $A$, $B$ og $C$ være $m \times n$ matricer, og lad $c$ og $k$ være skalarer.
