--- a/incl/main/linear_algebra/matricer_vektorer/specmatricer.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/specmatricer.tex
@@ -1,10 +1,10 @@
 \subsection{Udvalgte matricer og vektorer} 
 % 
-Hvis alle indgange i en matrix er nul, kaldes dette for en \textit{nulmatrix}. 
+Hvis alle indgange i en matrix er nul, kaldes dette for en \textit{nulmatrix}, noteret $O$. 
 En $m \times n$ nulmatrix noteres $O_{m,n}$.
 %
 Et andet særtilfælde er \textit{standardvektorerne} i $\R^n$, som er defineret ved  
-%
+% Jeg er lidt i tvivl om om der skal være et ekstra nul i længen så der ikke står 1 ... ? - Julie 
 $$
 \textbf{e}_1=
 \begin{bmatrix}
@@ -36,7 +36,7 @@ $$
 %
 \begin{defn}{}{}
 %
-En $n \times n$, $n \in \Z^+$, \textbf{identitetsmatrix} $I_n$ består af alle standardvektorer $\textbf{e}_1, \textbf{e}_2, \ldots, \textbf{e}_n$ i $R^n$, således 
+En $n \times n$ \textbf{identitetsmatrix} $I_n$, hvor $n \in \Z^+$, består af alle standardvektorer $\textbf{e}_1, \textbf{e}_2, \ldots, \textbf{e}_n$ i $R^n$, således 
 $$
 I_n=
 \begin{bmatrix}
