--- a/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
@@ -81,9 +81,9 @@ Så har matricer følgende egenskaber:
 \end{enumerate}
 \end{thm}
 %
-\begin{proof}
+\begin{proof} % Skal dette bevis være i punktform? det skal det jo vel egenlig 
 Lad $A$, $B$ og $C$ være $m \times n$ matricer, og lad $c$ og $k$ være skalarer.
-Betragt $A + B$ og $B + A$ og bemærk jævnfør definition \ref{defn:mxsum}, at de $(i,j)$'te indgange bliver henholdsvis $a_{i,j} + b_{i,j}$ og $b_{i,j} + a_{i,j}$, hvilket beviser (a).
+Betragt $A + B$ og $B + A$ og bemærk jævnfør \ref{defn:mxsum}, at de $(i,j)$'te indgange bliver henholdsvis $a_{i,j} + b_{i,j}$ og $b_{i,j} + a_{i,j}$, hvilket beviser (a).
 Ligeledes ses det, at $(a_{i,j} + b_{i,j}) + c_{i,j} = a_{i,j} + (b_{i,j} + c_{i,j})$, hvilket beviser (b).
 Endvidere kan $0$ isoleres i $a_{i,j} + 0 = a_{i,j}$, således $a_{i,j} + (-a_{i,j}) = 0$, hvilket beviser (c) og (d), da alle indgange i en nulmatrix er $0$.
 \\\\
@@ -96,6 +96,9 @@ Det samme gøres for ligheden i (g), hvor ligheden $(c + k)a_{i,j} = ca_{i,j} + 
 \noindent
 \\
 %
-Da vektorer er matricer med enten én række eller én søjle er samme operationer mulige og besidder samme egenskaber.
+Da vektorer er matricer med enten én række eller én søjle er samme operationer mulige og vektorer besidder derfor de samme egenskaber.
 %
 % Mere sssssssssssssssssssssssssssssssssssss
+\\\\
+\phantom{Hejmeddig}
+\\\\
