--- a/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
@@ -1,6 +1,6 @@
 \subsection{Matrixtransponering}
 %
-\textit{Matrixtransponering} er i nogen henseender brugbart. 
+\textit{Matrixtransponering} er i nogen henseender brugbart, herunder i forbindelse med Simplexmetoden. 
 %
 % Henseender = Sammenhænge 
 %
@@ -60,7 +60,7 @@ A^T =
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-Sætning \ref{thm:mxtranspo} viser, at transponering bevarer summering og skalering af matricer.
+\ref{thm:mxtranspo} viser, at transponering bevarer summering og skalering af matricer.
 %
 \begin{thm}{}{mxtranspo}
 Lad $A$ og $B$ være $m \times n$ matricer, og lad $c$ være en skalar.
