Update Hyperplan_halvrum_polyeder.tex, Konvekse_maengder.tex, and 15 more files...

--- a/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
+++ b/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
@@ -9,7 +9,7 @@ $\mathcal{P} = \{x\in \R^n \mid A\mathbf{x}\geq b\}.$
 \end{defn}
 \noindent
 %
-Som det fremgår af definition \ref{defn:Polyede}, er et polyeder mængden af mulige løsninger $\mathbf{x}$ af et ligningssystem, hvilket også kaldes værdimængden.
+Som det fremgår af \ref{defn:Polyede}, er et polyeder mængden af mulige løsninger $\mathbf{x}$ af et ligningssystem, hvilket også kaldes værdimængden.
 Det gælder endvidere, at en mængde af formen $\mathcal{P} \{x \in \R^n \text{ } \mid \text{ } A\textbf{x} = b,x \geq 0 \}$ kaldes et \textit{polyeder på standardform}, hvilket beskrives yderligere i afsnit \ref{afsnit:fisk}.
 %
 %
