--- a/incl/main/grafisk_losning/Konvekse_maengder.tex
+++ b/incl/main/grafisk_losning/Konvekse_maengder.tex
@@ -37,7 +37,7 @@ Det konvekse hylster af vektorerne er på figuren markeret med blå.
 %
 \input{fig/tikz/geometri/konveks_eks_r3}
 %
-Af definition \ref{defn:konvekskombihylster} følger sætning \ref{thm:konveks}.
+Af \ref{defn:konvekskombihylster} følger sætning \ref{thm:konveks}.
 %
 \begin{thm}{}{konveks}
 \begin{enumerate}[label=(\alph*)]
@@ -59,7 +59,7 @@ Antag, at $\textbf{x}$ og $\textbf{y}$ henholdsvis opfylder, at $\textbf{a}^T \t
 Så er $\textbf{a}^T (\lambda \textbf{x} + (1 - \lambda) \textbf{y} ) \geq \lambda b + (1 - \lambda ) b = b$, hvilket beviser, at $ \lambda \textbf{x} + (1 - \lambda )\textbf{y}$ tilhører samme halvrum, hvormed halvrummet er konvekst.
 Bemærk, at en polyede er fællesmængden af et endeligt antal halvrum, og at (b) dermed er bevist jævnfør (a). 
 	\item  Dette punkt bevises ved induktion.
-Per definition \ref{defn:konvekskombihylster} ligger en konveks kombination af to elementer i en konveks mængde i mængden.
+Per \ref{defn:konvekskombihylster} ligger en konveks kombination af to elementer i en konveks mængde i mængden.
 Som induktionsantagelse antages det, at en konveks kombination af $c$ elementer i en konveks mængde også er i mængden.
 Dernæst undersøges $c+1$ elementer $x_1,x_2,\ldots,x_c+1$ i en konveks mængde $S$. 
 Lad $\lambda_1,\ldots,\lambda_{k+1}$ være ikke-negative skalarer, hvis sum er $1$. 
