--- a/incl/main/grafisk_losning/alg_hjorne.tex
+++ b/incl/main/grafisk_losning/alg_hjorne.tex
@@ -88,10 +88,10 @@ Så er følgende udsagn ækvivalente:
 \begin{proof}
 Lad $P$ være en polyede defineret ved betingelser på formen $\textbf{a}_i^T\textbf{x} \geq b_i$ og $\textbf{a}_i^T\textbf{x} = b_i$.\\\\
 %
-Lad $\textbf{x} \in \mathcal{P}$ være et hjørnepunkt. Jævnfør definition \ref{defn:hjoerner} eksisterer der så et $\textbf{c} \in \R^n$, således at $\textbf{c}^T\textbf{x} < \textbf{c}^T\textbf{y}$ for alle $\textbf{y}$, som opfylder $\textbf{y} \in \mathcal{P}$ og $\textbf{y} \neq \textbf{x}$.
+Lad $\textbf{x} \in \mathcal{P}$ være et hjørnepunkt. Jævnfør \ref{defn:hjoerner} eksisterer der så et $\textbf{c} \in \R^n$, således at $\textbf{c}^T\textbf{x} < \textbf{c}^T\textbf{y}$ for alle $\textbf{y}$, som opfylder $\textbf{y} \in \mathcal{P}$ og $\textbf{y} \neq \textbf{x}$.
 Hvis $\textbf{y} \in \mathcal{P}$, $\textbf{z} \in \mathcal{P}$, $\textbf{y} \neq \textbf{x}$, $\textbf{z} \neq \textbf{x}$ og $0 \leq \lambda \leq 1$, så $\textbf{c}^T\textbf{x} < \textbf{c}^T\textbf{y}$ og $\textbf{c}^T\textbf{x} < \textbf{c}^T\textbf{z}$.
 Dette medfører, at $\textbf{c}^T\textbf{x} < \textbf{c}^T(\lambda \textbf{y} + (1-\lambda)\textbf{z})$, som betyder, at $\textbf{x}^T \neq \lambda \textbf{y} + (1 - \lambda)\textbf{z}$.
-Derfor kan $\textbf{x}$ ikke blive udtrykt som en kombination af to andre elementer i $\mathcal{P}$, hvilket betyder, at $\textbf{x}$ er et ekstremumspunkt ifølge definition \ref{defn:ekstrema}.
+Derfor kan $\textbf{x}$ ikke blive udtrykt som en kombination af to andre elementer i $\mathcal{P}$, hvilket betyder, at $\textbf{x}$ er et ekstremumspunkt ifølge \ref{defn:ekstrema}.
 Hermed (b) $\Rightarrow$ (a).
 \\\\
 %
