--- a/incl/main/grafisk_losning/degenerering.tex
+++ b/incl/main/grafisk_losning/degenerering.tex
@@ -1,6 +1,6 @@
 \section{Degenerering}
 % idonnotknow
-Af definition \ref{defn:basal} fremgår det, at der skal være $n$ aktive betingelser, for at $\mathbf{x}$ er en basal løsning. 
+Af \ref{defn:basal} fremgår det, at der skal være $n$ aktive betingelser, for at $\mathbf{x}$ er en basal løsning. 
 Nedenfor defineres tilfælde, hvor der er flere end $n$ aktive betingelser. 
 %
 \begin{defn}{}{}
@@ -32,7 +32,7 @@ $
 Ligeledes findes en definition for en degenereret basal løsning for polyeder på standardform. 
 Jævnfør definition \ref{afsnit:fisk} skal der være $m$ aktive betingelser og $n-m$ aktive ikke-negativitetsbetingelserne. 
 % Hedder det negativitetsbetingelser???? 
-Dermed skal et polyeder på standardform have flere end $m-n$ ikke-negativitetsbetingelserne for at have en degenereret basal løsning, hvilket er formuleret i definition \ref{defn:degenenene}. 
+Dermed skal et polyeder på standardform have flere end $m-n$ ikke-negativitetsbetingelserne for at have en degenereret basal løsning, hvilket er formuleret i \ref{defn:degenenene}. 
 %
 \begin{defn}{}{degenenene}
 Lad $\mathcal{P}$ være et polyeder på standardform
