--- a/incl/main/grafisk_losning/ekstrema_punkter.tex
+++ b/incl/main/grafisk_losning/ekstrema_punkter.tex
@@ -37,4 +37,4 @@ Vektoren $\textbf{w}$ er i modsætning ikke hjørnepunkt, da hyperplanet rammer 
 %
 %
 Dette kan ligeledes beskrives som, at $\mathbf{x}$ er et hjørne i $\mathcal{P}$, såfremt $\mathcal{P}$ er på den ene side af et hyperplan, der skærer $\mathcal{P}$ i $\mathbf{x}$. 
-Jævnfør definition \ref{defn:ekstrema} har dette hyperplan ligningen $y \mid \mathbf{c}^T\mathbf{x}=\mathbf{c}^T\mathbf{y}.$
+Jævnfør \ref{defn:ekstrema} har dette hyperplan ligningen $y \mid \mathbf{c}^T\mathbf{x}=\mathbf{c}^T\mathbf{y}.$
