--- a/incl/main/grafisk_losning/poly_std_form.tex
+++ b/incl/main/grafisk_losning/poly_std_form.tex
@@ -7,7 +7,7 @@ $\mathcal{P}=\{ \mathbf{x} \in \R^n  \mid  A\mathbf{x}=\mathbf{b}, \mathbf{x} \g
 $\mathcal{P}$ er her et \textit{polyeder på standardform}.
 I de fleste tilfælde er det en fordel at antage, at de $m$ rækker i $A$ er lineært uafhængige.
 I sætning \ref{thm:julieerfantalastisk} vises endvidere, at antagelsen om, at rækkerne er uafhængige, kan foretages, da de svarer til overflødige betingelser, som kan udelades.
-Som det ses i definition \ref{defn:basal}, skal der være $n$ aktive begrænsninger i spil for at finde en basal mulig løsning.
+Som det ses i \ref{defn:basal}, skal der være $n$ aktive begrænsninger i spil for at finde en basal mulig løsning.
 Såfremt $m \neq n$, skal der derfor vælges $n-m$ variable $\textbf{x}_i$ med henblik på, at sætte disse $\textbf{x}_i=0$, hvilket gør begrænsningerne $\textbf{x}_i \geq 0$ aktive.
 %ovenstående 53 i bogen har behov for andre læser så vi kan diskutere hvad det betyder.
 Det er dog ikke uvæsentligt, hvilke af disse variable der omdannes til $0$ hvilket belyses af sætning \ref{thm:polystd}.
