--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -227,7 +227,7 @@ er en løsning anderledes fra den trivielle løsning, hvor $x_1, x_2,\ldots,x_k=
 %
 Det kan i nogle tilfælde afgøres ved inspektion, hvorvidt en mængde vektorer $\mathbf{u},\mathbf{u}_2,\ldots ,\mathbf{u}_k$ er lineært afhængige. 
 Jævnfør sætning \ref{thm:inspektion} er mængden af vektorer afhængige, hvis $\mathbf{0}$ er en af dem, hvis to af vektorerne er parallelle, eller hvis der er flere vektorer end hver vektors antal af koordinater. 
-Med udgangspunkt i eksempel \ref{fisk} ses det, at de to vektorer i $\S_2$ er parallelle og derfor er lineært afhængige. 
+Med udgangspunkt i \ref{fisk} ses det, at de to vektorer i $\S_2$ er parallelle og derfor er lineært afhængige. 
 \\\\
 Hvis det ikke ved hjælp af inspektion kan afgøres, om en matrix er lineært afhængig eller lineært uafhængig, kan det undersøges ved at opstille totalmatricen af mængden af vektorer, hvor matricen derefter via rækkeopperationer laves til trappeform. 
 Hvis der er pivotindgange i alle søjlerne, er mængden af vektorer lineært uafhængige. Hvis der er frie variable, er mængden af vektorer derimod lineært afhængige.
