--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
@@ -176,7 +176,7 @@ For at beskrive en matrices egenskaber i forhold til pivotindgange er der brug f
 Bemærk, at der for en $m \times n$ matrix gælder, at $\text{rang}(A)+\text{null}(A)=n$. 
 % . 
 %
-Med udgangspunkt i matrix $A$ på reduceret trappeform fra eksempel \ref{eks_gauss} bliver rang og nullitet i 
+Med udgangspunkt i matrix $A$ på reduceret trappeform fra \ref{eks_gauss} bliver rang og nullitet i 
 %
 \begin{align*}
 A=\begin{blockarray}{ccccccc}
@@ -206,7 +206,7 @@ Følgende udsagn er ækvivalente:
 %
 \begin{proof}
 %
-Lad $A$ være en $n \times m$ matrix og $\mathbf{b} \in \R^m$. Jævnfør definition \ref{defn:mvp} følger det, at der eksisterer en vektor 
+Lad $A$ være en $n \times m$ matrix og $\mathbf{b} \in \R^m$. Jævnfør \ref{defn:mvp} følger det, at der eksisterer en vektor 
 %
 \begin{align*}
 \mathbf{v}=      
@@ -228,7 +228,7 @@ Således er (a) og (c) ækvivalente.
 \end{proof}
 \\
 %
-Med udgangspunkt i eksempel \ref{eks_gauss} ses derfor, at $A$ er konsistent, da $d$ ikke er en pivotindgang. Såfremt ligningssystemet skulle være inkonsistent, kunne den have formen
+Med udgangspunkt i \ref{eks_gauss} ses derfor, at $A$ er konsistent, da $d$ ikke er en pivotindgang. Såfremt ligningssystemet skulle være inkonsistent, kunne den have formen
 %
 \begin{align*}
 B=\begin{blockarray}{ccccccc}
