--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
@@ -23,7 +23,7 @@ A \xrightarrow{R_i \rightarrow R_i + cR_h} B.
 %
 \end{defn}
 \noindent
-Rækkeoperationerne kan udføres, når ligningssystemet er skrevet som en matrix. Eksempler på de elementære rækkeoperationer ses i eksempel \ref{eks1}.
+Rækkeoperationerne kan udføres, når ligningssystemet er skrevet som en matrix. Eksempler på de elementære rækkeoperationer ses i \ref{eks1}.
 \\
 %
 % Hvis vi bruger tilde skal den kommenteres hær
@@ -160,7 +160,7 @@ A=
 \end{blockarray}
 \end{align*}
 %
-Jævnfør definition \ref{defn:redtrap} er $A$ på reduceret trappeform.
+Jævnfør \ref{defn:redtrap} er $A$ på reduceret trappeform.
 \end{eks}
 %
 %Motiverende tekst
@@ -174,7 +174,7 @@ Jævnfør definition \ref{defn:redtrap} er $A$ på reduceret trappeform.
 \end{defn}
 \noindent
 \begin{eks}\label{eks:pivot}
-Betragt matrix $A$ fra eksempel \ref{eks:trappe}. Pivotindgangene i $A$ er her markeret med blåt.
+Betragt matrix $A$ fra \ref{eks:trappe}. Pivotindgangene i $A$ er her markeret med blåt.
 %
 \begin{align*}
 A=
@@ -189,7 +189,7 @@ A=
 \end{align*}
 %
 \end{eks}
-Pivotindgange vil fremover blive markeret med blå, som set i eksempel \ref{eks:pivot}.
+Pivotindgange vil fremover blive markeret med blå, som set i \ref{eks:pivot}.
 Dette vil blive gjort første gang en matrice bliver lavet til trappeform eller reduceret trappeform.
 %\begin{eks}\label{eks:pivot}
 %Betragt eksempel \ref{trappe}. Det ses, at ligningssystemet ikke har nogen løsning, da den fjerde ligning ikke har nogen løsning.\\
