--- a/incl/main/linear_algebra/span/under_bas_dim.tex
+++ b/incl/main/linear_algebra/span/under_bas_dim.tex
@@ -23,7 +23,7 @@ Lad $\S$ være spannet af en endelig ikke-tom mængde
 $\{\textbf{w}_1 , \textbf{w}_2 , \ldots , \textbf{w}_j\}$.
 Eftersom der kan opskrives en linearkombination 
 $$0\textbf{w}_1 + 0\textbf{w}_2 + \cdots + 0\textbf{w}_j=\textbf{0},$$ 
-så er $\textbf{0}$ i  $\S$, hvilket opfylder betingelse (a) i definition \ref{defn:underrum}.
+så er $\textbf{0}$ i  $\S$, hvilket opfylder betingelse (a) i \ref{defn:underrum}.
 \\\\
 %
 Lad $\textbf{u}$ og $\textbf{v}$ tilhøre $\S$. Så er
@@ -40,14 +40,14 @@ Dette kan omskrives til linearkombinationen
 \textbf{u}+\textbf{v}&=(c_1\textbf{w}_1+c_2\textbf{w}_2+\cdots+c_j\textbf{w}_j)+(k_1\textbf{w}_1+k_2\textbf{w}_2+\cdots+k_j\textbf{w}_j)\\
 &=(c_1+k_1)\textbf{w}_1+(c_2+k_2)\textbf{w}_2+\cdots+(c_j+k_j)\textbf{w}_j,
 \end{align*}
-hvilket viser, at $\textbf{u}+\textbf{v}\in \S$, hvormed (b) i definition \ref{defn:underrum} er opfyldt.
+hvilket viser, at $\textbf{u}+\textbf{v}\in \S$, hvormed (b) i \ref{defn:underrum} er opfyldt.
 \\\\
 For enhver skalar $h$ gælder, at
 \begin{align*}
 h\textbf{u}&=h(c_1\textbf{w}_1+c_2\textbf{w}_2+\cdots+c_j\textbf{w}_j)\\
 &=(h_1c_1)\textbf{w}_1+(h_2c_2)\textbf{w}_2+\cdots+(h_jc_j)\textbf{w}_j,
 \end{align*}
-og eftersom $h_1c_1,h_2c_2,\ldots,h_jc_j$ er skalarer, så er $h\textbf{u}\in \S$, hvilket opfylder (c) i definition \ref{defn:underrum}.
+og eftersom $h_1c_1,h_2c_2,\ldots,h_jc_j$ er skalarer, så er $h\textbf{u}\in \S$, hvilket opfylder (c) i \ref{defn:underrum}.
 Hermed er det bevist, at spannet af en delmængde af $\R^n$ er et underrum til $\R^n$.
 \end{proof}
 
@@ -59,7 +59,7 @@ Der findes bestemte typer af underrum, som er relevante i forbindelse med matric
 \end{defn}
 %
 \noindent
-Et eksempel på nulrummet til en matrix ses i eksempel \ref{nulrum}.
+Et eksempel på nulrummet til en matrix ses i \ref{nulrum}.
 
 \begin{eks}
 \label{nulrum}
