--- a/incl/main/linear_optimeringsproblemer/dualitet.tex
+++ b/incl/main/linear_optimeringsproblemer/dualitet.tex
@@ -84,7 +84,7 @@ Begræsninger & $\leq c_j$ & $\geq 0$   & Variable     \\
 \end{table}
 \noindent
 %
-Dual problemet kan således opstilles som i eksempel \ref{dual} \\
+Dual problemet kan således opstilles som i \ref{dual} \\
 %
 \begin{eks}
 \label{dual}
