--- a/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
+++ b/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
@@ -4,7 +4,7 @@
 \label{heeeeejjulle}
 % FUCK EN PÆN LABEL XD
 % I forhold til grafisk at løse lignende lineære programmeringsproblemer overstående, så vil følgende eksempel illustrere hvordan. 
-Eksempel \ref{eks:min_loes} illustrerer, hvordan lineære programmeringsproblemer løses i nærværende rapport.
+\ref{eks:min_loes} illustrerer, hvordan lineære programmeringsproblemer løses i nærværende rapport.
 \\\\
 \begin{eks}\label{eks:min_loes}
 Betragt maksimumsproblemet
