--- a/incl/main/simplex_metoden/simplex_metoden_intro.tex
+++ b/incl/main/simplex_metoden/simplex_metoden_intro.tex
@@ -161,7 +161,7 @@ x_1 & x_2 & \textcolor{blue}{s_1} & \textcolor{blue}{s_2} & z & b \\
 %	
 \subsubsection{4. Opstil en ny tabel ved hjælp af pivotering}
 %
-Med udgangspunkt i de elementære rækkeoperationer per definition \ref{defn:element}, samt Gauss-elimination jævnfør afsnit \ref{gauss}, skaleres pivotindgangen til $1$, og der skabes nuller under og over pivotindgangen ved hjælp af rækkeudskiftning.
+Med udgangspunkt i de elementære rækkeoperationer per \ref{defn:element}, samt Gauss-elimination jævnfør afsnit \ref{gauss}, skaleres pivotindgangen til $1$, og der skabes nuller under og over pivotindgangen ved hjælp af rækkeudskiftning.
 Nedenfor ses dette gjort for eksemplet.
 %
 %& \begin{blockarray}{cccccc}
