--- a/incl/main/linear_algebra/Lineaer_afbilding.tex
+++ b/incl/main/linear_algebra/Lineaer_afbilding.tex
@@ -141,7 +141,7 @@ T(\mathbf{v})&= v_1 \mathbf{a}_1+ v_2 \mathbf{a}_2 + \ldots + v_n \mathbf{a}_n \
 &= A \mathbf{v},
 \end{align*}
 %Er det meningen, at ovenstående skal være på to linjer? 
-hvilket jævnfør definition \ref{defn:fisk3} beviser, at
+hvilket jævnfør \ref{defn:fisk3} beviser, at
 %
 \begin{align*}
 T(\mathbf{v})= T_A (\mathbf{v}).
