--- a/incl/main/linear_algebra/invertibilitet.tex
+++ b/incl/main/linear_algebra/invertibilitet.tex
@@ -29,7 +29,7 @@ A=
 1 & 3 & 2
 \end{bmatrix}
 \end{equation*}  
-fra eksempel \ref{eks:fisk5}, sådan at:
+fra \ref{eks:fisk5}, sådan at:
 \begin{equation*}
 T_A
 \left(
