--- a/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
@@ -20,7 +20,7 @@ Såfremt en matrix $A$ er invertibel, findes der en entydig matrix $B$, som er d
 %
 \begin{proof}
 Antag at der findes to matricer  $B$ og $C$, som begge har størelsen $n \times n$, hvorom det gælder, at disse er inverse til $n \times n$ matricen $A$.
-Det gælder derfor fra definition \ref{defn:mxinvers}, at $A$ er inversen til $B$ og $C$.
+Det gælder derfor fra \ref{defn:mxinvers}, at $A$ er inversen til $B$ og $C$.
 Derfor haves at $AB=BA=I_{n}$, samt at $AC=CA=I_{n}$. 
 Fra sætning \ref{thm:mxmulti} haves derfor at:
 \begin{align*}
@@ -46,7 +46,7 @@ Givet to $m \times n$ matricer $A$ og $B$, så gælder, at
 %
 \begin{proof}
 (a)
-Udsagnet følger af definition \ref{defn:mxinvers}. 
+Udsagnet følger af \ref{defn:mxinvers}. 
 \\\\
 (b) Antag, at $A$ og $B$ er invertibel matricer, så $(AB)(B^{-1}A^{-1})=A(BB^{-1})A^{-1}=AI_nA^{-1}=AA^{-1}=I_n$. 
 Det kan gennem lignende operationer vises at $(B^{-1}A^{-1})(AB)=I_n$.
@@ -54,7 +54,7 @@ Dermed er $AB$ en invertibel matrix, hvis invers er $A^{-1}B^{-1}$.
 Dermed er $AB^{-1}=A^{-1}B^{-1}$.
 \\\\
 (c) Antag at A er invertibel. 
-Det følger fra definition \ref{defn:mxinvers}, at $A^{-1}A=I_n$. 
+Det følger fra \ref{defn:mxinvers}, at $A^{-1}A=I_n$. 
 Jævnfør sætning \ref{thm:mxmulti}(g) følger det hermed, at $A^T(A^{-1})^T=(A^{-1}A)^T=I_n^T=I_n$. 
 Ligeledes kan det vises, at $(A^{-1})^TA^T=I_n$. 
 Derfor er $A^T$ en invertibel matrix med inversen $(A{-1})^T$ og $(A^T)^{-1}A=(A^{-1})^T$.
@@ -147,7 +147,7 @@ $
 %
 %HER SAD DEF 3.8 FØR
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-Det er dog ikke altid, der findes en matrix $B$, så kriterierne i definition \ref{defn:mxinvers} opfyldes. 
+Det er dog ikke altid, der findes en matrix $B$, så kriterierne i \ref{defn:mxinvers} opfyldes. 
 %
 \begin{thm}{}{mxinvertibel}
 Lad $A$ være en $n \times n$ matrix. 
@@ -174,7 +174,7 @@ Fra sætning \ref{thm:mxinvers} fremgår det, at $P^{-1}$ er en invertibel matri
 %find begin example
 \\
 Det er fordelagtigt at benytte algoritmer til at invertere matricer.
-Jævnfør definition \ref{defn:mxinvers} opfylder en $n \times n$ matrices inverse matrix $AA^{-1}=I_n$.
+Jævnfør \ref{defn:mxinvers} opfylder en $n \times n$ matrices inverse matrix $AA^{-1}=I_n$.
 Med dette kan ligningen $A[\textbf{x}_1\text{  }\textbf{x}_2\text{  }\ldots\text{  }\textbf{x}_n ] = [\textbf{e}_1\text{  }\textbf{e}_2\text{  }\ldots\text{  }\textbf{e}_n ]$ opstilles.
 Da den inverse matrix er entydig kan søjlerne findes ved at løse $A\textbf{x}_i = \textbf{e}_i$.
 Det gøres ved Gauss-elimination på $[A\textbf{ }|\textbf{ }\textbf{e}_i]$.
