Update 1.tex, 11.tex, and 3 more files...

--- a/CSB/incl/main/1.tex
+++ b/CSB/incl/main/1.tex
@@ -1,4 +1,6 @@
 \chapter{Det hængende kabel}
 % God arbejdslyst xD
-\section*{fisk}
-% 
+\input{incl/main/11}
+\input{incl/main/12}
+\input{incl/main/13}
+\input{incl/main/14}
